# BukaLisp

./: .gitignore  CMakeLists.txt  README.md  _BUILD.bat  _BUILD_DBG.bat  _DBG_OFF.bat  bench.lua  bench.py  bench2.lua  bench_call.lua  bench_call.py  input.json  main.cpp
bukalisplib/: binding-env-thoughts.bkl  binding-env.bkl  c2_test_incl.bkl  c2_tests.bkl  code-pad.bkl  compiler.bkl  compiler.lal  compiler2.bkl  compiler2_codegen.bkl  compiler2_opt_prim.bkl  compiler2_syntax.bkl  js_compiler.bkl  local-env.bkl  prog-frame.bkl  test-compiler.bkl  transformator.bkl  util.bkl
doc/: bkl_reference.mkd
src/: atom.cpp  atom.h  atom_cpp_serializer.cpp  atom_cpp_serializer.h  atom_generator.h  atom_map.h  atom_printer.cpp  atom_printer.h  atom_userdata.cpp  atom_userdata.h  bukalisp.cpp  bukalisp.h  buklivm.cpp  buklivm.h  config.h  interpreter.cpp  interpreter.h  lilvm.cpp  lilvm.h  mempool.cpp  mempool.h  ops.cpp  parse_util.h  parser.h  port_primitives.cpp  ports.cpp  ports.h  primitives.cpp  runtime.cpp  runtime.h  strutil.h  symtbl.h  tokenizer.h  util.cpp  util.h  vmprog.cpp  vmprog.h
test_scripts/: compiler_test.bkl  compiler_test.lal  prog.lal  prog2.lal  test_comp.bkl  test_comp.lal  test_comp_lots_lambdas.bkl
tests/: bench.bkl  bench_dir_call_vm.bkl  bench_dir_vm.bkl  bench_vm.bkl  c2g_tests.bkl  compiler_test.bkl  compiler_test.bkl.orig  module_test.bkl  test0.json  test1.json  test10.json  test11.json  test12.json  test13.json  test14.json  test15.json  test16.json  test17.json  test18.json  test19.json  test2.json  test20.json  test21.json  test3.json  (+7 more)
(+42 files in other folders)
